--- a/Lecture.ipynb
+++ b/Lecture.ipynb
@@ -3,12 +3,12 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "DSP Python Workshop 2022.ipynb",
+      "name": "Copy of DSP Python Workshop 2022.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "0IxIzDKQQebR",
         "v3xpkyxixmHr"
       ],
-      "authorship_tag": "ABX9TyMUqwRBUlazljG5YgYOcUKz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,16 +27,14 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jpacilo/PythonWorkshop/blob/main/DSP%20Python%20Workshop%202022.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jpacilo/PythonWorkshop/blob/main/Lecture.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "markdown",
       "source": [
         "# **Better Practices** in Python For Data Science\n",
-        "Author: Joshua Paolo Acilo <br>\n",
-        "Date: March 4, 2022 <br>\n",
-        "Time: 1:00 - 4:00 PM"
+        "⚠️ Please make a copy of this colab notebook first by clicking **File -> Save a Copy in Drive** on the menu bar <br>"
       ],
       "metadata": {
         "id": "1xYXxy9ytJnh"
@@ -47,27 +45,22 @@
       "source": [
         "## README\n",
         "\n",
+        "**Lecturer**\n",
+        "- Joshua Paolo Acilo\n",
+        "- EDO Advanced Analytics\n",
+        "\n",
         "**Schedule**\n",
         "- 1:00 - 2:30 PM Lecture\n",
         "- 2:40 - 4:00 PM Homework\n",
         "\n",
         "**Reminders**\n",
-        "- Feel free to ask questions anytime! You can leave a message in the chatbox or unmute yourself and speak.\n",
-        "- This is not an Introduction to Python. I expect everyone to at least know the basics in programming.\n",
+        "- Feel free to ask questions anytime! You can leave a message in the chatbox or unmute yourself and speak. <br>\n",
+        "- This is not an Introduction to Python. I expect everyone to at least know the basics in programming. <br>\n",
         "- You learn more by doing. Try to adopt this new concepts in your workflow next time!\n",
         "\n"
       ],
       "metadata": {
         "id": "1NqsEYMbtQrI"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "⚠️ Please make a copy of this colab notebook first by clicking *File -> Save a Copy in Drive* on the menu bar <br>"
-      ],
-      "metadata": {
-        "id": "_AUN_6sYI7Cn"
       }
     },
     {
@@ -94,7 +87,7 @@
         "id": "7bSw9y6halM7",
         "outputId": "3305c0a3-7995-49d9-9ec9-ad3149c555ba"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,7 +117,7 @@
         "id": "9MttWE5QQhui",
         "outputId": "5ba42eaf-e0d2-4b56-db3b-8d801db8bfe2"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +142,7 @@
       "source": [
         "## Write Cleaner Code \n",
         "\n",
-        "💡 Any fool can write code that a computer can understand. **Good programmers write code that humans can understand.** <br>"
+        "Any fool can write code that a computer can understand. **Good programmers write code that humans can understand.** 💡"
       ],
       "metadata": {
         "id": "QtXwWm2Ju6mr"
@@ -186,7 +179,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Use **meaningful and pronounceable variable names.** Let the variable speak for itself."
+        "Use **meaningful and pronounceable variable names.** Let the variable speak for itself. 🤯"
       ],
       "metadata": {
         "id": "WyIo8VoTLYvX"
@@ -212,13 +205,13 @@
       "metadata": {
         "id": "UgmX9QhIDQzR"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Of course, there will be some exceptions, especially in **domain-specific jargons.**"
+        "Of course, there will be some exceptions, especially in **domain-specific jargons.** 🧐"
       ],
       "metadata": {
         "id": "kKBjcYAPDXXh"
@@ -238,7 +231,7 @@
       "metadata": {
         "id": "TsuBSjgLDXQ6"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,13 +260,13 @@
       "metadata": {
         "id": "zfb7U7sHV9oQ"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "Don't force the reader of your code to translate what the variable means. **Explicit is better than implicit.**"
+        "Don't force the reader of your code to translate what the variable means. **Explicit is better than implicit.** 🤔"
       ],
       "metadata": {
         "id": "kEQdf4fYbt43"
@@ -297,7 +290,7 @@
       "metadata": {
         "id": "FssfMEUmV0q2"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +305,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Write a manual for your function using docstrings.** This will help not only you in the future, but also your collaborators."
+        "**Write a manual for your function using docstrings.** This will help not only you in the future, but also your collaborators. 😉"
       ],
       "metadata": {
         "id": "W-sDa_IQgOEq"
